src/test/ui/const-generics/min_const_generics/default_trait_param.stderr
error: expected one of `!`, `(`, `+`, `,`, `::`, `<`, or `>`, found `=`
  --> $DIR/default_trait_param.rs:1:28
   |
LL | trait Foo<const KIND: bool = true> {}
   |                            ^ expected one of 7 possible tokens

error: aborting due to previous error

