src/test/ui/const-generics/min_const_generics/default_trait_param.rs
trait Foo<const KIND: bool = true> {}
                        //~^ ERROR expected one of `!`, `(`, `+`, `,`, `::`, `<`, or `>`, found `=`

fn main() {}
